Added more documentation and comments.
TODO for the file upload_name in spittalbase.py was fixed on the server side.
TODO for a top-level login removed. It is unneeded. Each subclass should have it's own login method
     so that they can be used independantly. No global login is needed.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:db4142ad90306311fb8cb90836d74ed13c74f84da884caf24e368c93b0f29c8c"
+  "signature": "sha256:f124e5290f36d506e8878c0b1a64c8cacad708808ada6590491129a1f91867e5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -111,7 +111,7 @@
      "collapsed": false,
      "input": [
       "upload_directory = \"/home/bsimmons/Oasis/MyOasisFiles/models/\"\n",
-      "spittal.model.upload_directory(upload_directory, do_timestamps)"
+      "spittal.model.upload_directory(upload_directory, do_timestamps, module_supplier_id)"
      ],
      "language": "python",
      "metadata": {},
@@ -212,7 +212,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -239,7 +239,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -266,7 +266,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -306,6 +306,7 @@
      "collapsed": false,
      "input": [
       "resp = spittal.exposure.create_benchmark()\n",
+      "benchmark_id = json.loads(resp.content)['id']\n",
       "resp.content"
      ],
      "language": "python",
@@ -316,7 +317,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "'{\"status\": \"done\", \"id\": \"6\", \"success\": true, \"JobId\": \"0\"}'"
+        "'{\"status\": \"done\", \"id\": \"7\", \"success\": true, \"JobId\": \"0\"}'"
        ]
       }
      ],
@@ -333,8 +334,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "benchmark_id = json.loads(resp.content)['id']\n",
-      "resp = spittal.exposure.do_task(\"Benchmark\", 4, 1)\n",
+      "resp = spittal.exposure.do_task(\"Benchmark\", benchmark_id, 1)\n",
+      "last_job_id = json.loads(resp.content)['JobId']\n",
       "resp.content"
      ],
      "language": "python",
@@ -345,7 +346,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 401}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 155}'"
        ]
       }
      ],
@@ -362,7 +363,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "last_job_id = json.loads(resp.content)['JobId']\n",
       "resp = spittal.exposure.check_status(last_job_id, 1)\n",
       "resp.content"
      ],
@@ -372,13 +372,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 15,
        "text": [
-        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 401, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
+        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 155, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
