Added basic logging functionality.
Now we can more easily debug from the front-end.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f124e5290f36d506e8878c0b1a64c8cacad708808ada6590491129a1f91867e5"
+  "signature": "sha256:e1dd08308d9168283e16ab1e0abb1c8708b26b26e264e09bea61fdaa183d9258"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,16 +52,18 @@
       "pub_user = \"root\"\n",
       "module_supplier_id = \"27\" #Added a manaual entry for this.\n",
       "do_timestamps = True\n",
+      "log_file = \"/var/www/ipython/spittalpond/logger.log\"\n",
       "# Create new spittal instance.\n",
       "spittal = spittalpond.SpittalPond(\n",
-      "            base_url=\"http://tmrbmub01prd:8000\",\n",
-      "            pub_user=\"root\"\n",
+      "    base_url=\"http://tmrbmub01prd:8000\",\n",
+      "    pub_user=\"root\",\n",
+      "    log_file=log_file\n",
       ")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -97,7 +99,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -124,7 +126,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -150,7 +152,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -176,7 +178,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -212,7 +214,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -239,7 +241,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -266,7 +268,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -317,7 +319,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "'{\"status\": \"done\", \"id\": \"7\", \"success\": true, \"JobId\": \"0\"}'"
+        "'{\"status\": \"done\", \"id\": \"2\", \"success\": true, \"JobId\": \"0\"}'"
        ]
       }
      ],
@@ -346,7 +348,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 155}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 91}'"
        ]
       }
      ],
@@ -372,13 +374,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 13,
        "text": [
-        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 155, \"result\": \"FAILED\", \"Timeout\": false, \"progress\": \"FAILED\"}'"
+        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 91, \"result\": \"FINISHED\", \"Timeout\": false, \"progress\": \"FINISHED\"}'"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
