Updated codebase to be Oasis R1.3 compatible.
Previously, the code had been written for Oasis R1.1.
Also, for reference, this commit was squashed from expr/R1.3_compatible.

--- a/toymodel.ipynb
+++ b/toymodel.ipynb
@@ -43,6 +43,7 @@
       "import spittalpond\n",
       "import time\n",
       "import json\n",
+      "import logging\n",
       "from IPython.display import HTML"
      ],
      "language": "python",
@@ -62,14 +63,14 @@
      "collapsed": false,
      "input": [
       "pub_user = \"root\"\n",
-      "module_supplier_id = \"27\" #Added a manaual entry for this.\n",
       "do_timestamps = True\n",
-      "log_file = \"/var/www/ipython/spittalpond/logger.log\"\n",
+      "log_file = \"C:/Users/bsimmons/repos/spittalpond/log.log\"\n",
       "# Create new spittal instance.\n",
       "spittal = spittalpond.SpittalPond(\n",
-      "    base_url=\"http://tmrbmub01prd:8000\",\n",
-      "    pub_user=\"root\",\n",
-      "    log_file=log_file\n",
+      "    base_url=\"http://127.0.0.1:8000\",\n",
+      "    pub_user=pub_user,\n",
+      "    log_file=log_file,\n",
+      "    log_level=logging.DEBUG\n",
       ")"
      ],
      "language": "python",
@@ -124,8 +125,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "upload_directory = \"/home/bsimmons/Oasis/MyOasisFiles/models/\"\n",
-      "spittal.model.upload_directory(upload_directory, do_timestamps, module_supplier_id)"
+      "upload_directory = \"C:/Workshop20150128/OASISVM/upload/spit/model/\"\n",
+      "spittal.model.upload_directory(upload_directory, do_timestamps)"
      ],
      "language": "python",
      "metadata": {},
@@ -151,7 +152,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "spittal.model.create_model_structures(module_supplier_id)"
+      "spittal.model.create_model_structures()"
      ],
      "language": "python",
      "metadata": {},
@@ -239,7 +240,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "upload_directory = \"/home/bsimmons/Oasis/MyOasisFiles/exposures/\"\n",
+      "upload_directory = \"C:/Workshop20150128/OASISVM/upload/spit/exposure/\"\n",
       "spittal.exposure.upload_directory(upload_directory, do_timestamps)"
      ],
      "language": "python",
@@ -267,7 +268,7 @@
      "collapsed": false,
      "input": [
       "model_data_dict = spittal.model.data_dict\n",
-      "spittal.exposure.create_exposure_structure(model_data_dict, module_supplier_id)"
+      "spittal.exposure.create_exposure_structure(model_data_dict)"
      ],
      "language": "python",
      "metadata": {},
@@ -320,7 +321,7 @@
      "collapsed": false,
      "input": [
       "resp = spittal.exposure.create_benchmark()\n",
-      "benchmark_id = json.loads(resp.content)['id']\n",
+      "benchmark_id = json.loads(resp.content)['taskId']\n",
       "resp.content"
      ],
      "language": "python",
@@ -331,7 +332,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'{\"status\": \"done\", \"id\": \"7\", \"success\": true, \"JobId\": \"0\"}'"
+        "'{\"status\": \"done\", \"taskId\": \"5\", \"success\": true, \"JobId\": \"0\"}'"
        ]
       }
      ],
@@ -360,7 +361,7 @@
        "output_type": "pyout",
        "prompt_number": 13,
        "text": [
-        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 101}'"
+        "'{\"status\": \"WIP\", \"progress\": \"Started\", \"detail\": \"OK\", \"success\": true, \"JobId\": 55}'"
        ]
       }
      ],
@@ -386,13 +387,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 16,
        "text": [
-        "'{\"status\": \"done\", \"CompletedSteps\": \"\", \"JobId\": 101, \"result\": \"FINISHED\", \"Timeout\": false, \"progress\": \"FINISHED\"}'"
+        "'{\"status\": \"done\", \"RemainingChunks\": \"0\", \"CompletedSteps\": \"\", \"JobId\": 55, \"Timeout\": false, \"progress\": \"FINISHED\"}'"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -426,7 +427,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -440,12 +441,30 @@
      "collapsed": false,
      "input": [
       "gul_name = \"spittalGUL\"\n",
-      "exposure_instance = spittal.exposure.data_dict['exposures_instance']['id']"
+      "exposure_instance = spittal.exposure.data_dict['exposures_instance']['taskId']"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Automatically create the random numbers."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "spittal.run.auto_create_random_numbers()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -471,14 +490,14 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
-      "resp = spittal.run.get_gul_data(gul_name, \"my_data.csv\", module_supplier_id)\n",
-      "resp.content"
+      "resp = spittal.run.get_gul_data(gul_name, \"my_data.csv\", 3)\n",
+      "print len(resp.content)"
      ],
      "language": "python",
      "metadata": {},
@@ -487,27 +506,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Loaded model\n",
-        "Loaded model"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 18,
-       "text": [
-        "''"
+        "43777\n"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
